<package>
  <name>camera_calibrator</name>
  <version>3.21.13</version>
  <description>
     camera_calibrator allows easy calibration of monocular or stereo
     cameras using a checkerboard calibration target with opencv or matlab.
  </description>
  <author>Jacob Lambert</author>
  <maintainer email="jacob.lambert@tier4.jp">Jacob lambert</maintainer>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <test_depend>rostest</test_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <license>BSD</license>
  <url>http://www.ros.org/wiki/camera_calibration</url>

  <export>
    <rosdoc config="rosdoc.yaml" />
    <architecture_independent/>
  </export>
</package>
